Removed common php files that, added php-common as a submodule, updated README accordingly

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "public/lib/js-common"]
 	path = public/lib/js-common
 	url = https://github.com/zmiller91/js-common.git
+[submodule "php/common"]
+	path = php/common
+	url = https://github.com/zmiller91/php-common
