--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "php/common"]
 	path = php/common
 	url = https://github.com/zmiller91/php-common
+[submodule "public/lib/js-common"]
+	path = public/lib/js-common
+	url = https://github.com/zmiller91/js-common
