Included 3rd Party Libraries and Formatted the UI
    public/lib/startbootstrap-creative
    public/lib/animate.css
    README.md
        - added 3rd party libraries and updated the
	  README.md accordingly

    public/html/carousel.html
    public/html/main.html
    public/js/carousel.js
    public/js/utilities.js
        - integrated the old UI with the new angular
	  controllers. This included copying a large
	  amount of code for clamping images to the
	  screen size. Those methods re put in
	  utilities.js.

    public/index.php
       - made it such that anything that's not an api
         call or a request for index.php will return a
	 404

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "public/lib/js-common"]
 	path = public/lib/js-common
 	url = https://github.com/zmiller91/js-common
+[submodule "public/lib/startbootstrap-creative"]
+	path = public/lib/startbootstrap-creative
+	url = https://github.com/BlackrockDigital/startbootstrap-creative
+[submodule "public/lib/animate.css"]
+	path = public/lib/animate.css
+	url = https://github.com/daneden/animate.css
